--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.4.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "postman": "^0.2.0",
     "spotify-web-api-js": "^1.5.1",
